--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-keystone-voms (2014.1.3) precise; urgency=medium
+python-keystone-voms (2014.1.3-1) stable; urgency=medium
 
   [ Alvaro Lopez Garcia ]
   * [c8bf837] Move to pbr
