--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+python-keystone-voms (2014.1.4-1) stable; urgency=medium
+
+  * [ea180c6] code reorganization
+  * [9c720ee] Set version dinamically
+  * [7f971b9] doc: revert to haiku theme
+  * [5b6f492] packaging: update debian stuff
+  * [7e1d5a4] packaging: release 2014.1.3
+  * [3d1bf9b] packaging: add debian revision and fix distribution
+
+ -- Alvaro Lopez Garcia <aloga@ifca.unican.es>  Mon, 16 Feb 2015 09:55:55 +0100
+
 python-keystone-voms (2014.1.3-1) stable; urgency=medium
 
   [ Alvaro Lopez Garcia ]
