--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+python-keystone-voms (2015.1-1) stable; urgency=medium
+
+  [ Enol Fernandez ]
+  * [71c22b3] Support for Keystone stable/kilo.
+  * [b000f61] Use stable/kilo for testing in Travis.
+  * [c672c66] Update documentation for Kilo.
+
+ -- Alvaro Lopez Garcia <aloga@ifca.unican.es>  Wed, 08 Jul 2015 23:22:56 +0200
+
 python-keystone-voms (2014.2-1) stable; urgency=medium
 
   [ Enol Fernandez ]
